feat - add fun header

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include "partials/site-head.njk" %}
-    <body data-layout="cover" >
+    <body data-layout="cover" data-props="noPad">
         {% include "partials/site-header.njk" %}
         <main data-layout="stack" data-props="centered x:start">
             {% block content %}
