--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,5 +1,8 @@
 <header>
+    <div aria-hidden="true" class="header-bg"></div>
+    <div class="header">
     <a href="/" aria-label="Front Stories">
-        Front stories
+        {{title}}
     </a>
+    </div>
 </header>
