feat - display stories

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,3 +1,3 @@
-<footer>
-    Built using Notion and Eleventy.
+<footer data-layout="box" data-props="invert noBorder noCurve">
+    <span>Built using Notion and Eleventy.</span>
 </footer>
