--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,7 +1,9 @@
 {% extends "layouts/base.njk" %}
 {% block content %}
-    <article>
-        {# <h1>{{ title }}</h1> #}
+    <article data-layout="stack" data-props="space:l">
+        <a aria-hidden data-heading="5" href="/">{{ title }}</a>
+        <p>{{description}}</p>
         {{ content | safe }}
+        {% include "partials/story-card-list.njk" %}
     </article>
 {% endblock %}
