--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,7 +1,7 @@
 <header>
     <div aria-hidden="true" class="header-bg"></div>
     <div class="header">
-    <a href="/" aria-label="Front Stories">
+    <a data-heading="5" href="/" aria-label="Front Stories">
         {{title}}
     </a>
     </div>
