--- a/src/stories/story-cover.njk
+++ b/src/stories/story-cover.njk
@@ -1,44 +1,46 @@
 ---
-title: Story
+title: Frontend Stories
 pagination: 
     data: stories
     size: 1
     alias: story
     addAllPagesToCollections: true
 tags: 
-    - cover
+    - stories
+layout: layouts/story.njk
 permalink: stories/{{story.name | slugify}}/
 ---
-{# TODO: Change to another layout where the header is not present #}
-{% extends "layouts/base.njk" %}
-{% block content %}
-    {# <p>{{ title }}</p> #}
-    <article data-layout="cover box" data-props="x:start">
-        <ul>
+
+{# permalink: stories/{{story.name | slugify}}/ #}
+<div data-layout="stack">
+    <div data-layout="cover box" data-props="x:start noPad" data-shadow>
+        <div data-layout="box" data-props="centered noBorder">
+            <h1 data-heading="2">{{ story.name }}</h1>
+        </div>
+        <ul data-layout="box" data-props=" noBorder ">
             {%- for category in story.categories %}
-                <li>{{ category.name }}</li>
+                <li class="story-tag">{{ category.name }}</li>
             {% endfor -%}
         </ul>
-        <div data-props="centered">
-            <div data-layout="stack">
-                <h1>{{ story.name }}</h1>
-                <p>{{ story.description }}</p>
-            </div>
-        </div>
-        <nav aria-labelledby="{{ story.id }}">
-            <b id="{{ story.id }}">Pagination</b>
-            <ol data-layout="cluster" data-props="x:between">
-                <li>
-                    {% if pagination.href.previous %}
-                        <a href="{{ pagination.href.previous }}">Previous</a>
-                        {% else %}Previous{% endif %}
-                </li>
-                <li>
-                    {% if pagination.href.next %}
-                        <a href="{{ pagination.href.next }}">Next</a>
-                        {% else %}Next{% endif %}
-                </li>
-            </ol>
-        </nav>
-    </article>
-{% endblock %}
+    </div>
+    <h2 data-heading="4" id="summary">Overview</h2>
+    <p>{{ story.description }}</p>
+    <h2 data-heading="4" id="reference">Further Readings</h2>
+    <ul data-layout="stack" data-props="noPad x:stretch">
+        {%- for reference in story.references %}
+            <a data-layout="box" href="#" data-shadow>{{ reference.name }}</a>
+        {% endfor -%}
+    </ul>
+    <h2 data-heading="4" id="reference">Related</h2>
+    <b id="{{ story.id }}">Pagination</b>
+    <nav aria-labelledby="{{ story.id }}" data-layout="switcher" data-props="x:between">
+        {% if pagination.href.previous %}
+            <a data-layout="box stack" href="{{ pagination.href.previous }}">
+                Previous
+            </a>
+        {% endif %}
+        {% if pagination.href.next %}
+            <a data-layout="box" href="{{ pagination.href.next }}">Next</a>
+        {% endif %}
+    </nav>
+</div>
