--- a/src/stories/story-cover.njk
+++ b/src/stories/story-cover.njk
@@ -12,7 +12,7 @@ permalink: stories/{{story.name | slugify}}/
 ---
 
 {# permalink: stories/{{story.name | slugify}}/ #}
-<div data-layout="stack">
+<div data-layout="stack" data-props="space:xl recursive">
     <div data-layout="cover box" data-props="x:start noPad" data-shadow>
         <div data-layout="box" data-props="centered noBorder">
             <h1 data-heading="2">{{ story.name }}</h1>
@@ -23,16 +23,25 @@ permalink: stories/{{story.name | slugify}}/
             {% endfor -%}
         </ul>
     </div>
-    <h2 data-heading="4" id="summary">Overview</h2>
-    <p>{{ story.description }}</p>
-    <h2 data-heading="4" id="reference">Further Readings</h2>
-    <ul data-layout="stack" data-props="noPad x:stretch">
-        {%- for reference in story.references %}
-            <a data-layout="box" href="#" data-shadow>{{ reference.name }}</a>
-        {% endfor -%}
-    </ul>
-    <h2 data-heading="4" id="reference">Related</h2>
-    <b id="{{ story.id }}">Pagination</b>
+    <section>
+        <h2 data-heading="4" id="summary">Overview</h2>
+        <p data-props="space:s">{{ story.description }}</p>
+    </section>
+    <section>
+        <h2 data-heading="4" id="reference">Further Readings</h2>
+        <p data-props="space:s">Some reference</p>
+        <ul data-layout="stack" data-props="noPad x:stretch">
+            {%- for reference in story.references %}
+                <a data-layout="box" href="#" data-shadow>{{ reference.name }}</a>
+            {% endfor -%}
+        </ul>
+    </section>
+    <section>
+        <h2 data-heading="4" id="reference">Related</h2>
+        <p data-props="space:s">Insert related</p>
+        
+    </section>
+    <span data-heading="5" id="{{ story.id }}">Pagination</span>
     <nav aria-labelledby="{{ story.id }}" data-layout="switcher" data-props="x:between">
         {% if pagination.href.previous %}
             <a data-layout="box stack" href="{{ pagination.href.previous }}">
@@ -40,7 +49,7 @@ permalink: stories/{{story.name | slugify}}/
             </a>
         {% endif %}
         {% if pagination.href.next %}
-            <a data-layout="box" href="{{ pagination.href.next }}">Next</a>
+            <a data-layout="box" data-props="space:0" href="{{ pagination.href.next }}">Next</a>
         {% endif %}
     </nav>
 </div>
