--- a/src/stories/paginated-singleton.njk
+++ b/src/stories/paginated-singleton.njk
@@ -1,19 +1,32 @@
 ---
 title: Frontend Stories
 pagination: 
-    data: stories
+    data: collections.stories
     size: 1
     alias: story
-    addAllPagesToCollections: true
-tags: 
-    - stories
 layout: layouts/story.njk
+
 permalink: stories/{{story.name | slugify}}/
 ---
 
-{# permalink: stories/{{story.name | slugify}}/ #}
+{% set nextStory = collections.stories | getNextCollectionItem(pagination.page) %}
+{% set previousStory = collections.stories | getPreviousCollectionItem(pagination.page) %}
+{# {% set story = story %} #}
 <div data-layout="stack" data-props="space:xl recursive">
-    <div data-layout="cover box" data-props="x:start noPad" data-shadow>
+    
+    <div data-layout="cover box" data-props="x:start noPad" >
+        <nav aria-labelledby="{{ story.id }}" data-layout="switcher" data-props="x:between">
+        {% if pagination.href.previous %}
+            <a data-layout="box" data-props="noCurve noBorder invert" href="{{ pagination.href.previous }}">
+                <span>Previous</span>
+            </a>
+        {% endif %}
+        {% if pagination.href.next %}
+            <a data-layout="box" data-props="noCurve noBorder invert space:0" href="{{ pagination.href.next }}">
+                <span>Next</span>
+            </a>
+        {% endif %}
+    </nav>
         <div data-layout="box" data-props="centered noBorder">
             <h1 data-heading="2">{{ story.name }}</h1>
         </div>
@@ -39,17 +52,20 @@ permalink: stories/{{story.name | slugify}}/
     <section>
         <h2 data-heading="4" id="reference">Related</h2>
         <p data-props="space:s">Insert related</p>
-        
+        {# <span>{{previousStory | log}}</span> #}
     </section>
-    <span data-heading="5" id="{{ story.id }}">Pagination</span>
-    <nav aria-labelledby="{{ story.id }}" data-layout="switcher" data-props="x:between">
+    <span data-heading="5" id="pagination-nav">Pagination</span>
+    <nav aria-labelledby="pagination-nav" data-layout="switcher" data-props="x:between">
         {% if pagination.href.previous %}
             <a data-layout="box stack" href="{{ pagination.href.previous }}">
-                Previous
+                <span>Previous</span>
             </a>
         {% endif %}
         {% if pagination.href.next %}
-            <a data-layout="box" data-props="space:0" href="{{ pagination.href.next }}">Next</a>
+            <a data-layout="box stack" data-props="space:0" href="{{ pagination.href.next }}">
+                <span>Next</span>
+                {# <span>{{ collections.stories | getNextCollectionItem(pagination.page) | log }}</span> #}
+            </a>
         {% endif %}
     </nav>
 </div>
