feat - add emji favicon 👀

--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -20,6 +20,7 @@
     <meta name="twitter:creator" content="{{meta.twitter_name}}">
     <meta name="twitter:site" content="{{meta.twitter_name}}">
     <meta name="twitter:text:title" content="{{meta.title}}">
-    <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/x-icon" sizes="16x16">
-    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon" sizes="32x32">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{meta.site_emoji if meta.site_emoji else '👀'}}</text></svg>">
+    {# <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/x-icon" sizes="16x16">
+    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon" sizes="32x32"> #}
 </head>
