--- a/src/stories/index.njk
+++ b/src/stories/index.njk
@@ -36,7 +36,7 @@ permalink: stories/{{story.name | slugify}}/
         </ul>
     </div>
     <section id="summary" data-layout="cover" data-props="noPad">
-        <h2>Overview</h2>
+        <h2>Why it matters</h2>
         <div data-mardown data-props="space:s">
             {% renderTemplate "md, liquid", story %}
             <span>
