--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,7 +2,7 @@
 {% block content %}
     <article data-layout="stack" data-props="space:l">
         <a aria-hidden data-heading="5" href="/">{{ title }}</a>
-        <p>{{description}}</p>
+        <p>{{meta.site_description}}</p>
         {{ content | safe }}
     </article>
 {% endblock %}
