--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -2,7 +2,7 @@
     <div aria-hidden="true" class="header-bg"></div>
     <div class="header">
     <a data-heading="5" href="/" aria-label="Front Stories">
-        {{title}}
+        {{meta.site_name + " - " + title}}
     </a>
     </div>
 </header>
