--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,3 +1,26 @@
-<footer data-layout="box" data-props="invert noBorder noCurve">
-    <span>Built using Notion and Eleventy.</span>
+<footer data-layout="switcher box" data-props="invert  noBorder noCurve" >
+    <div class="footer" data-layout="switcher">
+        
+    <div class="stack">
+        <h4 data-heading="5">About</h4>
+        <p>{{meta.site_description}}</p>
+    </div>
+    <div class="stack">
+        <h4 data-heading="5">Categories</h4>
+        <div data-layout="cluster">
+            {%- for category in collections.categories %}
+                <a href="/categories/{{category | slugify}}" class="story-tag">{{ category }}</a>
+            {% endfor -%}
+        </div>
+    </div>
+    <div class="stack">
+        <h4 data-heading="5">Pages</h4>
+        <div data-layout="stack" data-props="x:start">
+            {%- for page in collections.pages %}
+                <a href="{{page.url}}" >{{ page.data.title }}</a>
+            {% endfor -%}
+        </div>
+    </div>
+    </div>
+
 </footer>
