--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,4 +1,4 @@
-<li class="story-card" data-layout="box stack" data-shadow="hoverable focusable">
+<li class="story-card" data-layout="box stack" >
     <a data-heading="5" href="/stories/{{ entry.name | slugify }}">{{ entry.name }}</a>
     {% if entry.categories.length %}
         <div data-layout="cluster">
