--- a/src/css/style.css
+++ b/src/css/style.css
@@ -123,17 +123,21 @@ h6 {
 [data-layout~="box"] {
   /* --color-light: var(--gray-100);
   --color-dark: var(--gray-900); */
+  --padding: var(--space-s);
   display: block;
-  padding: var(--padding, var(--space-s));
+  padding-top: var(--padding);
+  padding-left: var(--padding);
+  padding-right: var(--padding);
+  padding-bottom: var(--padding);
   color: var(--color-dark);
   background-color: var(--color-light);
   border: var(--border-width) solid;
   outline: var(--border-width) transparent;
   outline-offset: calc(var(--border-width) * -1);
 }
-[data-layout~="box"] *:not([data-layout~="box"]) {
+/* [data-layout~="box"] *:not([data-layout~="box"]) {
   color: inherit;
-}
+} */
 
 /*
 [data-layout~="box"][data-props~="invert"] {
@@ -141,7 +145,8 @@ h6 {
   background-color: var(--color-dark);
 }
 */
-[data-layout~="box"][data-props~="invert"] {
+[data-layout~="box"][data-props~="invert"]
+ {
   color: var(--color-light);
   background-color: var(--color-dark);
 }
@@ -499,11 +504,13 @@ main {
   padding-top: var(--page-top);
   padding-bottom: var(--page-top);
 }
+
 main,
 .header,
-footer {
+.footer {
   padding-left: var(--responsive-padding);
   padding-right: var(--responsive-padding);
+  /* --padding: var(--responsive-padding); */
 }
 .header {
   position: fixed;
@@ -571,6 +578,10 @@ footer {
   font-size: var(--step--1);
   font-weight: 500;
   border: var(--border-thin) solid;
+}
+.story-tag, .story-tag > a{
+  color: var(--gray-900);
+
 }
 a {
   text-decoration: none;
