feat - add grid composition

--- a/src/_includes/layouts/story.njk
+++ b/src/_includes/layouts/story.njk
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:left">
         <aside data-layout="stack">
-            <a aria-hidden data-heading="5" href="/">{{ title }}</a>
+            <a aria-hidden data-heading="5" href="/">{{ meta.site_name }}</a>
             <nav data-layout="stack">
                 <a href="#summary">Overview</a>
                 <a href="#reference">Further reading</a>
