--- a/src/_includes/partials/story-card-entries.njk
+++ b/src/_includes/partials/story-card-entries.njk
@@ -1,5 +1,5 @@
-<div data-layout="cover" data-props="space:xl">
-    <ul data-layout="cluster" data-props="space:s noPad y:stretch centered"> 
+<div data-layout="cover" data-props="space:l noPad">
+    <ul data-layout="grid" role="list" data-props="noPad"> 
         {%- for entry in entries -%}
             {% include "partials/story-card-entry.njk"%}
         {%- endfor -%}
