--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/base.njk" %}
 {% block content %}
     <article data-layout="stack" data-props="space:l">
-        <a aria-hidden data-heading="5" href="/">{{ title }}</a>
+        <a aria-hidden data-heading="5" href="/">{{ meta.site_name }}</a>
         <p>{{meta.site_description}}</p>
         {{ content | safe }}
     </article>
