--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,16 +107,16 @@ h6 {
   --border-thick: 4px;
   --border-width: var(--border-thick);
 
-  --gray-50: #fafafa;
-  --gray-100: #f4f4f5;
-  --gray-200: #e4e4e7;
-  --gray-300: #d4d4d8;
-  --gray-400: #a1a1aa;
-  --gray-500: #71717a;
-  --gray-600: #52525b;
-  --gray-700: #3f3f46;
-  --gray-800: #27272a;
-  --gray-900: #18181b;
+  --gray-50: rgb(250, 250, 250);
+  --gray-100: rgb(244, 244, 245);
+  --gray-200: rgb(228, 228, 231);
+  --gray-300: rgb(212, 212, 216);
+  --gray-400: rgb(161, 161, 170);
+  --gray-500: rgb(113, 113, 122);
+  --gray-600: rgb(82, 82, 91);
+  --gray-700: rgb(63, 63, 70);
+  --gray-800: rgb(39, 39, 42);
+  --gray-900: rgb(24, 24, 27);
 }
 
 /*----------  Box Layout  ----------*/
@@ -528,6 +528,9 @@ main {
   padding-bottom: var(--page-top);
 }
 
+body > footer{
+  min-height: 20rem;
+}
 main,
 .header,
 .footer {
