--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -9,7 +9,7 @@
         <h3 data-heading="5">Categories</h3>
         <div data-layout="cluster">
             {%- for category in collections.categories %}
-                <a href="/categories/{{category | slugify}}" class="story-tag">{{ category }}</a>
+                <a href="/categories/{{category | slugify}}" data-tag>{{ category }}</a>
             {% endfor -%}
         </div>
     </div>
