feat - add icons

--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -20,7 +20,23 @@
     <meta name="twitter:creator" content="{{meta.twitter_name}}">
     <meta name="twitter:site" content="{{meta.twitter_name}}">
     <meta name="twitter:text:title" content="{{meta.title}}">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{meta.site_emoji if meta.site_emoji else '👀'}}</text></svg>">
-    {# <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/x-icon" sizes="16x16">
-    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon" sizes="32x32"> #}
+    {# <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{meta.site_emoji if meta.site_emoji else '👀'}}</text></svg>"> #}
+
+        <!-- favicons -->
+    <link rel="shortcut icon" href="images/logos/favicon-16x16.png" type="image/x-icon" sizes="16x16" />
+    <link rel="shortcut icon" href="images/logos/favicon-32x32.png" type="image/x-icon" sizes="32x32" />
+
+    <!-- iOS 7 or prior (legacy) -->
+    <link rel="apple-touch-icon" sizes="144x144" href="images/logos/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/logos/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/logos/apple-touch-icon-72x72.png"> 
+    <link rel="apple-touch-icon" sizes="57x57" href="images/logos/apple-touch-icon-57x57.png">
+
+    
+    <!-- iOS 8 and later -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/logos/apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/logos/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/logos/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/logos/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/logos/apple-touch-icon-60x60.png">
 </head>
