--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -39,6 +39,10 @@ body {
   [data-heading~="5"] {
     font-size: var(--step-1);
   }
+  h6,
+  [data-heading~="6"] {
+    font-size: var(--step-0);
+  }
   /* p,
   li {
     max-width: var(--measure);
@@ -71,7 +75,9 @@ body {
 a:hover {
   text-decoration: underline;
 } */
-
+a {
+  text-decoration: none;
+}
 
 
 ul[role="list"],
