--- a/src/css/components/_buttons.css
+++ b/src/css/components/_buttons.css
@@ -1,8 +1,12 @@
 [data-button] {
   /* display: inline-block; */
+  --minimum-height: 46px;
   padding: var(--space-xs) var(--space-m);
   border-radius: var(--border-radius);
-  /* border: 1px solid var(--gray-300); */
+  min-height: var(--minimum-height);
+  font-weight: 500;
+  line-height: var(--minimum-height);
+  text-align: center;
   text-decoration: none;
   color: var(--gray-900);
   background-color: var(--gray-100);
