--- a/src/css/components/_tags.css
+++ b/src/css/components/_tags.css
@@ -1,6 +1,7 @@
 [data-tag] {
     --border-radius: 0.25rem;
     background: linear-gradient(to bottom, var(--gray-100), var(--gray-300));
+    color: var(--gray-900);
     display: block;
     width: max-content;
     padding: calc(var(--space-xs) * 0.2) var(--space-xs);
